--- a/signup.html
+++ b/signup.html
@@ -42,8 +42,6 @@
       padding: 2.5em;
       display: grid;
       grid-template-columns: repeat(6, 1fr);
-      grid-auto-rows: minmax(50px, auto);
-      grid-gap: 4em;
     }
 
     .heading,
@@ -51,6 +49,7 @@
     .pic {
       grid-column: 1/7;
     }
+
     @media only screen and (min-width: 768px) {
       .heading {
         grid-column: 1/7;
@@ -138,15 +137,6 @@
               </ul>
             </li>
           </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn dark-red-bg" type="submit">Search</button>
-          </form>
         </div>
       </div>
     </nav>
@@ -185,9 +175,9 @@
               </div>
               <div class="form">
                 <form>
-                  <div class="mb-3">
+                  <div class="mb-1">
                     <label for="exampleInputEmail1" class="form-label"
-                      >Email address</label
+                      >First Name</label
                     >
                     <input
                       type="email"
@@ -195,13 +185,41 @@
                       id="exampleInputEmail1"
                       aria-describedby="emailHelp"
                     />
-                    <div id="emailHelp" class="form-text">
-                      We'll never share your email with anyone else.
-                    </div>
                   </div>
-                  <div class="mb-3">
+                  <div class="mb-1">
+                    <label for="exampleInputEmail1" class="form-label"
+                      >Last Name</label
+                    >
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="exampleInputEmail1"
+                      aria-describedby="emailHelp"
+                    />
+                  </div>
+                  <div class="mb-1">
+                    <label for="exampleInputPassword1" class="form-label"
+                      >User Name</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="exampleInputPassword1"
+                    />
+                  </div>
+                  <div class="mb-1">
                     <label for="exampleInputPassword1" class="form-label"
                       >Password</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="exampleInputPassword1"
+                    />
+                  </div>
+                  <div class="mb-1">
+                    <label for="exampleInputPassword1" class="form-label"
+                      >Email</label
                     >
                     <input
                       type="password"
@@ -214,7 +232,11 @@
                 </form>
               </div>
               <div class="pic">
-                <img class="img-fluid" src="images/signup.svg" alt="lady" />
+                <img
+                  class="img-fluid mt-md-2"
+                  src="images/signup.svg"
+                  alt="lady"
+                />
               </div>
             </div>
           </div>
@@ -229,11 +251,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
+
